src/components/Dumbbell/Dumbbell.scss
.wrapper {
  font-family: ABCSans, Helvetica, Arial, sans-serif;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 15px auto;
  flex-basis: auto;
  font-size: 12px;
}

.label {
  color: black;
  text-align: right;
  flex-basis: 80px;
  padding-right: 20px;
}

@media (min-width: 415px) {
  .label {
    flex-basis: 100px;
  }
}

.chart {
  flex-grow: 1;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
}

.mid-bar {
  height: 2px;
  background-color: #e1e7e8;
}

.dot1 {
  position: absolute;
  width: 10px;
  height: 10px;
  left: 50%;
  top: 50%;
  -webkit-transform: translateY(-50%) translateX(-50%);
  transform: translateY(-50%) translateX(-50%);
  background-color: #ff6100;
  border-radius: 50%;
}

.dot1Percent {
  color: #cf4200;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateY(-50%) translateX(-100%);
  transform: translateY(-50%) translateX(-100%);
  font-weight: 900;
  text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255),
    -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
  letter-spacing: 1px;
}

.dot1PercentRight {
  color: #cf4200;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateY(-50%) translateX(0%);
  transform: translateY(-50%) translateX(0%);
  font-weight: 900;
  text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255),
    -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
  letter-spacing: 1px;
}

.dot1Label {
  color: #cf4200;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-100%) translateY(-75%);
  transform: translateX(-100%) translateY(-75%);
  max-width: 60px;
  font-weight: bold;
  text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255),
    -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
  letter-spacing: 1px;
  text-align: right;
  line-height: 14px;
}

.dot1LabelRight {
  color: #cf4200;
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(0%) translateY(-75%);
  transform: translateX(0%) translateY(-75%);
  max-width: 60px;
  font-weight: bold;
  text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255),
    -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
  letter-spacing: 1px;
  line-height: 14px;
}

.dot2Label {
  color: #001050;
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(-100%) translateY(-75%);
  transform: translateX(-100%) translateY(-75%);
  max-width: 60px;
  font-weight: bold;
  text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255),
    -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
  letter-spacing: 1px;
  text-align: right;
  line-height: 14px;
}

.dot2LabelRight {
  color: #001050;
  position: absolute;
  left: 50%;
  -webkit-transform: translateX(0%) translateY(-75%);
  transform: translateX(0%) translateY(-75%);
  max-width: 60px;
  font-weight: bold;
  text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255),
    -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
  letter-spacing: 1px;
  line-height: 14px;
}

@media all and (-ms-high-contrast: none) {
  //  .foo { color: green } /* IE10 */
  *::-ms-backdrop,
  .dot1Label {
    -webkit-transform: translateX(-100%) translateY(-125%);
    transform: translateX(-100%) translateY(-125%);
  } /* IE11 */
  .dot1LabelRight {
    -webkit-transform: translateX(0%) translateY(-125%);
    transform: translateX(0%) translateY(-125%);
  }
  .dot2Label {
    -webkit-transform: translateX(-100%) translateY(-125%);
    transform: translateX(-100%) translateY(-125%);
  }
  .dot2LabelRight {
    -webkit-transform: translateX(0%) translateY(-125%);
    transform: translateX(0%) translateY(-125%);
  }
}

.dot2 {
  position: absolute;
  width: 10px;
  height: 10px;
  left: 50%;
  top: 50%;
  -webkit-transform: translateY(-50%) translateX(-50%);
  transform: translateY(-50%) translateX(-50%);
  background-color: #001050;
  border-radius: 50%;
}

.dot2Percent {
  color: #001050;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translateY(-50%) translateX(-100%);
  transform: translateY(-50%) translateX(-100%);
  font-weight: 900;
  text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255),
    -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
  letter-spacing: 1px;
}

.dot2PercentRight {
  color: #001050;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateY(-50%) translateX(0%);
  transform: translateY(-50%) translateX(0%);
  font-weight: 900;
  text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255),
    -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
  letter-spacing: 1px;
}

.line1 {
  position: absolute;
  width: 2px;
  height: 16px;
  left: 50%;
  top: 50%;
  -webkit-transform: translateY(-50%) translateX(-50%);
  transform: translateY(-50%) translateX(-50%);
  background-color: #78b8c4;
}

